2010-08-07  Nikolas Zimmermann  <nzimmermann@rim.com>

Reviewed by Daniel Bates.

        Pattern fill with image not rendered after reload
        https://bugs.webkit.org/show_bug.cgi?id=41596

        Fixed by a one-liner. Instead of just invalidating it's own resources, images also have to update
        resources in the ancestor chain, if imageChanged() has been called (for example, a slow loading image)

        Test: http/tests/misc/slow-loading-image-in-pattern.html

        * rendering/RenderSVGImage.cpp:
        (WebCore::RenderSVGImage::imageChanged):

2010-08-07  Nikolas Zimmermann  <nzimmermann@rim.com>

        Reviewed by Daniel Bates.

        Pattern fill with image not rendered after reload
        https://bugs.webkit.org/show_bug.cgi?id=41596

        Added test verifying that resources are properly updated, if an image child element has changed.

        * http/tests/misc/slow-loading-image-in-pattern.html: Added.
        * platform/mac/http/tests/misc/slow-loading-image-in-pattern-expected.checksum: Added.
        * platform/mac/http/tests/misc/slow-loading-image-in-pattern-expected.png: Added.
        * platform/mac/http/tests/misc/slow-loading-image-in-pattern-expected.txt: Added.


Canonical link: https://commits.webkit.org/55714@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@64901 268f45cc-cd09-0410-ab3c-d52691b4dbfc